Bug 436161 - iCalendar files with attachments are read incorrectly (file name)
Summary: iCalendar files with attachments are read incorrectly (file name)
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kcalendarcore
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-25 12:46 UTC by sourcemaker
Modified: 2021-09-18 14:47 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sourcemaker 2021-04-25 12:46:37 UTC
iCalendar files with attachments are read incorrectly and therefore the file name is not displayed in the calendar. 

Current implementation:
ATTACH;VALUE=BINARY;FMTTYPE=application/zip;ENCODING=BASE64;X-LABEL=filename.zip:

Expected implementation:
ATTACH;VALUE=BINARY;FMTTYPE=application/zip;ENCODING=BASE64;FILENAME=filename.zip:

Kontact/Calendar uses the property X-LABEL instead of FILENAME.

Is that on purpose?
Comment 1 Allen Winter 2021-09-18 13:55:23 UTC
Indeed, FILENAME is a Caldav standard by now.

https://datatracker.ietf.org/doc/html/rfc8607

I'll see what I can do.
Comment 2 Allen Winter 2021-09-18 14:47:53 UTC
Git commit 8da06215b64a8ca1c0b8f523b644d03e646a6295 by Allen Winter.
Committed on 18/09/2021 at 14:44.
Pushed by winterz into branch 'master'.

icalformat_p.cpp - support ATTACH parameter FILENAME

FILENAME is allowed per RFC860
Calendaring Extensions to WebDAV (CalDAV): Managed Attachments

Note that KOrganizer still writes back the Incidence
attachment's label with the X-LABEL parameter.

M  +6    -0    src/icalformat_p.cpp

https://invent.kde.org/frameworks/kcalendarcore/commit/8da06215b64a8ca1c0b8f523b644d03e646a6295