icalformat_p.cpp - support ATTACH parameter FILENAME

FILENAME is allowed per RFC860
Calendaring Extensions to WebDAV (CalDAV): Managed Attachments

Note that KOrganizer still writes back the Incidence
attachment's label with the X-LABEL parameter.

BUG: 436161